--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "dependencies": {
     "admin-lte": "^2.3.11",
     "axios": "^0.15.3",
+    "babel-preset-env": "^1.7.0",
     "bootstrap": "^3.3.7",
     "bootstrap3-wysihtml5-bower": "^0.3.3",
     "chart.js": "^2.5.0",
@@ -24,7 +25,9 @@
     "jquery-slimscroll": "^1.3.8",
     "jquery-ui": "^1.12.1",
     "vue": "^2.2.1",
+    "vue-bootstrap-table2": "^1.1.8",
     "vue-router": "^2.3.0",
+    "vue2-bootstrap-table2": "^1.1.13",
     "vuex": "^2.2.1"
   },
   "devDependencies": {
